# wireshark-plugin-afdx

./: CMakeLists.txt  ChangeLog.txt  Readme.md  Readme.rus  moduleinfo.h  wireshark-plugin-afdx_0.1.0.orig.tar.xz.delta  wireshark-plugin-afdx_0.1.0.orig.tar.xz.id
debian/: changelog  control  copyright  gbp.conf  wireshark-plugin-afdx.docs
examples/: capture_sample.pcap  eth6.txt  mac_equipment_application_table.csv  vl_preferences.csv
po/: ru.po
src/: afdx_utilities.c  afdx_utilities.h  interval_map.c  interval_map.h  packet-afdx.c
